# quantum-evolution-kernel

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  latest  mkdocs.yml  ptcfm_processed_dataset.json  pyproject.toml  versions.json
.github/workflows/: lint.yml  publish.yml  test.yml
backup-repo.git/: config  packed-refs
docs/: index.md  installation.md  sample_page.md  tutorials.md  usage.md
docs/contributing/: first contact.md  how to contribute.md
examples/: ml_tutorial.ipynb  pipeline.ipynb  quantum_kernel_ml_tutorial.ipynb  tutorial 1 - Using a Quantum Device to Extract Machine-Learning Features copy.ipynb  tutorial 1 - Using a Quantum Device to Extract Machine-Learning Features.ipynb  tutorial 1a - Using a Quantum Device to Extract Machine-Learning Features - low-level.ipynb  tutorial 1b - Training SVM QEK - low-level - generic dataset.ipynb  tutorial 2 - Machine-Learning with the Quantum EvolutionKernel.ipynb  tutorial.ipynb
qek/: __init__.py  executor.py  utils.py
qek/data/: __init__.py  conversion_data.py  dataset.py  datatools.py  extractors.py  graphs.py  processed_data.py
qek/kernel/: __init__.py  kernel.py
qek/shared/: __init__.py  _utils.py  retrier.py
tests/: conftest.py  mock_cloud_sdk.py  test_backends.py  test_dataset.py  test_datatools.py  test_extractors.py  test_graphs.py  test_kernel.py  test_main.py  test_utils.py
tests/cloud_fixtures/: README.md
tests/fixtures/: README.md  device_specs.json
v0.1.1/: 404.html  index.html
v0.1.1/sample_page/: index.html
v0.1.2/search/: search_index.json
v0.2.0/: 404.html  index.html
v0.2.1/search/: search_index.json
v0.2.2/sample_page/: index.html
v0.2.3/: 404.html  index.html
v0.2.4/: 404.html  index.html
v0.2.4/search/: search_index.json
v0.2.5/CONTRIBUTOR AGREEMENT/: index.html
v0.2.5/LICENSE/: index.html
v0.2.6/: 404.html  index.html
v0.2.6/search/: search_index.json
v0.2.7/: 404.html  index.html
v0.2.7/CONTRIBUTOR AGREEMENT/: index.html
v0.2.7/LICENSE/: index.html
v0.2.7/search/: search_index.json
v0.2.8-pre/: 404.html  index.html
v0.2.8-pre/CONTRIBUTOR AGREEMENT/: index.html
v0.2.8-pre/LICENSE/: index.html
v0.2.8-pre/installation/: index.html
v0.2.8-pre/search/: search_index.json
v0.2.8-pre/tutorials/: index.html
v0.2.8-pre/usage/: index.html
v0.2.9/: 404.html  index.html
v0.2.9/CONTRIBUTOR AGREEMENT/: index.html
v0.2.9/LICENSE/: index.html
v0.2.9/installation/: index.html
v0.2.9/search/: search_index.json
v0.2.9/tutorials/: index.html
v0.2.9/usage/: index.html
v0.3.0/: 404.html  index.html
v0.3.0/CONTRIBUTOR AGREEMENT/: index.html
v0.3.0/LICENSE/: index.html
v0.3.0/installation/: index.html
v0.3.0/search/: search_index.json
v0.3.0/tutorials/: index.html
v0.3.0/usage/: index.html
v0.3.1-pre/: 404.html
v0.3.1-pre/LICENSE/: index.html
v0.3.1-pre/search/: search_index.json
v0.3.1-pre/tutorial 1 - Using a Quantum Device to Extract Machine-Learning Features/: index.html
v0.3.1-pre/tutorial 1a - Using a Quantum Device to Extract Machine-Learning Features - low-level/: index.html
v0.3.1-pre/tutorial 1b - Training SVM QEK - low-level - generic dataset/: index.html
v0.3.1-pre/tutorial 2 - Machine-Learning with the Quantum EvolutionKernel/: index.html
v0.3.1-pre2/: index.html
v0.3.1-pre2/CONTRIBUTOR AGREEMENT/: index.html
v0.3.1-pre2/installation/: index.html
v0.3.1-pre2/search/: search_index.json
v0.3.1-pre2/tutorial 1a - Using a Quantum Device to Extract Machine-Learning Features - low-level/: index.html
v0.3.1-pre2/tutorial 1b - Training SVM QEK - low-level - generic dataset/: index.html
v0.3.1-pre3/search/: search_index.json
v0.3.1-pre3/tutorial 1a - Using a Quantum Device to Extract Machine-Learning Features - low-level/: index.html
v0.3.1-pre3/tutorial 1b - Training SVM QEK - low-level - generic dataset/: index.html
v0.3.1-pre3/tutorial 2 - Machine-Learning with the Quantum EvolutionKernel/: index.html
v0.3.1/search/: search_index.json
v0.3.1/usage/: index.html
v0.3.2/: 404.html  index.html  objects.inv
v0.3.2/CONTRIBUTOR AGREEMENT/: index.html
v0.3.3/: 404.html  index.html
(+213 files in other folders)
